Home画面に作者の名前を追加

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -59,6 +59,7 @@
 
     <footer class="bg-dark text-white text-center py-3">
       <p>あなたの名前</p>  
+      <p>ikumi & Mamoru</p>
     </footer>
 
     <!-- Optional JavaScript -->
