Fix for くるまでいけるくん

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -36,8 +36,8 @@
     </nav>
 
     <div class="jumbotron">
-      <h1 class="display-3">ブログタイトル!</h1>
-      <p class="lead">○○に関するブログです</p>
+      <h1 class="display-3">くるまでいけるくん</h1>
+      <p class="lead">くるまでいけます</p>
       <hr class="my-2">
     </div>
 
