Add RestaurantMap By Mamoru

--- a/RestaurantMap/templates/RestaurantMap/base.html
+++ b/RestaurantMap/templates/RestaurantMap/base.html
@@ -8,12 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'Css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'Css/style.css' %}">
   </head>
   <body>
+    <!-- 先頭で読み込むJS -->
+    {% block headExtrajs %}{% endblock %}
     <!-- ★★★ナビゲーション（ヘッダー）★★★ -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">ブログ</a>
+      <a class="navbar-brand" href="#">レストランマップ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'blog:index' %}">Home</a>
+            <!-- <a class="nav-link" href="{% url 'blog:index' %}">Home</a> -->
           </li>
           {% if user.is_superuser %}
           <li class="nav-item">
@@ -29,7 +31,7 @@
           </li>
           {% endif %}
         </ul>
-        <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'blog:index' %}">
+        <!-- <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'blog:index' %}"> -->
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="keyword">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
@@ -44,10 +46,10 @@
     </div>
 
     <!-- ★★★コンテンツ★★★ -->
-    <div class="container">
-      <div class="row">
+    <div class="container container-m">
+      <!-- <div class="row"> --><!-- rowはコンテンツの中で使用する Del Mamoru -->
         <!-- <div class="col-md-8"> --><!-- 横幅のサイズ変更 Del Mamoru -->
-        <div class="col-md-12">
+        <div class="col-md-12 mb-8">
           {% block content %}
           {% endblock %}
         </div>
@@ -60,7 +62,7 @@
             {% endfor %}
           </ul>
         </div> -->
-      </div>
+      <!-- </div> -->
     </div>
 
     <!-- ★★★フッター★★★ -->
@@ -73,5 +75,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    {% block footExtrajs %}{% endblock %}
   </body>
 </html>
