--- a/RestaurantMap/templates/RestaurantMap/store_list.html
+++ b/RestaurantMap/templates/RestaurantMap/store_list.html
@@ -1,5 +1,6 @@
 {% extends 'RestaurantMap/base.html' %}
 {% load static %}
+{% load custome_tag %}
 {% block headExtrajs %}
 <script src="http://maps.google.com/maps/api/js?key={{api_key}}&language=ja"></script>
 <script>
@@ -155,7 +156,7 @@
             <!-- 下記の範囲をクリックすることでAPIをたたき、Mapを描画する -->
             <div class="d-flex align-items-center bg-light h-100 text-center" onclick="renderMap('{{ store.latitude }}', '{{ store.longitude }}', '{{ store.name }}', this.parentElement.getAttribute('Id'))">
               <!-- 階層分けて表示しないと、レイアウトが崩れるので注意 -->
-              <div class="container-fluid">クリックで地図を表示</div>
+              <div class="container-fluid">クリックで地図を表示{{ map_view | get_value_by_key:store.hotPepper_id | safe }}</div>
             </div>
           </div>
         </div>
